src/objects/Collection_Fulfillment__c.object
<CustomObject>
    <description>A Collection and Fulfillment Cost Center/Post in order to initiate (collection) and pay (fulfillment) for the service.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Shows status of Org Code</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>Cost Centers name for Services</description>
        <inlineHelpText>Cost Centers name for Services</inlineHelpText>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abidjian, Cote D&apos;ivoire Dev Bank</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Asean And The Pacific Basin</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burma</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Code__c</fullName>
        <description>Org Code for Cost Center and Post</description>
        <inlineHelpText>Org Code for Cost Center and Post</inlineHelpText>
        <label>Org Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post__c</fullName>
        <description>Post location for services</description>
        <inlineHelpText>Post location for services</inlineHelpText>
        <label>Post</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Collection &amp; Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Collection &amp; Fulfillment  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collections &amp; Fulfillments</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Services Record Type</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>